# spaic-bin_packing

./: README.md  README_example.md
mirte_driving/: ORAL_EXAM_NAV_prep.md  README.md  README_MAP.md  README_NAV.md  README_PLACING.md  package.xml  setup.cfg  setup.py
mirte_driving/config/: fastdds_udp_only.xml
mirte_driving/launch/: detector.launch.py  mission.launch.py  shuttle.launch.py
mirte_driving/mirte_driving/: __init__.py  scan_filter.py  shuttle_manager.py  zone_detector.py
mirte_driving/params/: exploration_nav2_params.yaml  slam_params.yaml
mirte_driving/resource/: mirte_driving
mirte_driving/trees/: nav2_minimal_tree.xml
mirte_perception/: README_GRASPING.md  package.xml  setup.py
mirte_perception/launch/: grasp.launch.py  perception.launch.py
mirte_perception/mirte_perception/: grasp_node.py  perception_node.py
mirte_stacking/: box_placer.py  marker_navigator.py
mirte_stacking/config/: camera_calibration.yaml
spatial_ai_simulation/: CMakeLists.txt  README.md  package.xml
spatial_ai_simulation/gazebo_models/: box_100.stl  box_120.stl  box_140.stl  box_160.stl  box_80.stl
spatial_ai_simulation/launch/: spatial_ai_mirte_master.launch.py  spatial_ai_simulation.launch.py
spatial_ai_simulation/worlds/: .spatial_ai_station.world.swp  spatial_ai_station.world
stacking/: marker_navigator.py
