<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mirte_driving</name>
  <version>1.0.0</version>
  <description>Team Member C — navigation/mapping/shuttle ONLY.
    SLAM (slam_toolbox) + Nav2 A&#8596;B marker shuttle: zone_detector finds tag A
    (id 100) and the Zone B pair midpoint (ids 101/102); shuttle_manager drives
    the legs (A at ~1 m + camera fine-alignment, B at ~0.3 m) and exposes the
    merge hooks for the A-grasp (mirte_perception, laptop) and B-placement
    (mirte_placement) stages.</description>
  <maintainer email="guilherme6henriques@gmail.com">group3 spatial-ai</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
